# rust-neural-network

./: Cargo.toml
src/: cost.rs  formulas.rs  main.rs  network.rs  regularization.rs
src/io/: data.rs  mnist.rs  mod.rs  model.rs
