[package]
name = "rust-neural-network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
flate2 = "1.0.24"
lazy_static = "1.4.0"
libm = "0.2.6"
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
rand = "0.8.5"
